nav + header + main container added

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,9 +17,49 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: 'Source Sans 3', sans-serif;
   font-size: 24px;
+  height: 100%;
+  min-height: 150vh;
+}
+
+.logo {
+  font-family: 'Bungee';
+  font-weight: 400;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+  width: 90%;
+  margin: 0 auto;
+  padding: 20px 0;
+ }
+
+main form {
+  width: 100%;
+}
+
+main form textarea {
+  width: 100%;
+  margin-bottom: 1em;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  resize: none;
+  border-bottom: 3px solid black;
+}
+
+main form .button-counter {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Bungee';
+}
+
+main form .button-counter button {
+  background-color: #4056A1;
+  color: white;
+}
