--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -81,3 +81,19 @@ article > span {
   color: #c99926;
   transition: linear 0.2s;
 }
+
+.error-message {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ color: red;
+ border: 3px solid red;
+ width: 90%;
+ margin: 0 auto;
+ padding: 5px 0;
+
+}
+
+.error-container {
+  padding-top: 20px;
+}
