--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,13 +7,12 @@
   }
 } */
 
-
 /* set the navigation bar heigh, background and font color */
 nav {
   height: 120px;
   width: 100%;
-  background-color: #4056A1;
-  color: #FFFFFF;
+  background-color: #4056a1;
+  color: #ffffff;
   display: flex;
   align-items: center;
   padding: 0 1.5em;
@@ -23,7 +22,7 @@ nav {
 
 /* now apply the Bungee font to the <span> element within the <nav> */
 nav span {
-  font-family: 'Bungee', sans-serif;
+  font-family: "Bungee", sans-serif;
 }
 
 /* add flexboard to navigation bar */
@@ -45,18 +44,13 @@ nav span {
 }
 
 .head {
-background-color: #cc8800;
-background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */ ;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-width: 100%;
-height: 400px;
+  background-color: #cc8800;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 400px;
 }
-
-/* nav {
-  animation: bounce 1s infinite;
-} */
-
