--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -12,13 +12,23 @@
 }
 
 /* style the profile picture */
+@media only screen and (min-width: 1024px) {
 .profile-picture {
-  width: 200px;
-  height: 200px;
+  /* width: 200px; */
+  /* height: 200px; */
   border-radius: 50%;
   margin-bottom: 20px;
 }
+}
 
+@media only screen and (max-width: 1023px) {
+  .profile-picture {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+  }
+}
 /* style the username */
 .username {
   font-size: 1.5em;
